# agentic-core

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  SLO.md  docker-compose.test.yaml  docker-compose.yml  linear-setup.json  pyproject.toml  ruff.toml
.github/ISSUE_TEMPLATE/: spike-brief.md
.github/workflows/: cd.yaml  ci.yaml  docs.yml  release.yaml
defaults/: studio_config.json
deployment/argocd/: application.yaml
deployment/docker/: Dockerfile
docs/: disaster-recovery.md  github-workspace-setup-report.md  nice-to-have-features.md
docs/site/: mkdocs.yml  zensical.yaml
docs/specs/: myst.yml  whatsapp-adapter.md
examples/flutter_websocket_client/: main.dart
examples/multi_persona_supervisor/: main.py
examples/simple_react_agent/: main.py  persona.yaml
infrastructure/scripts/: create-secret.sh  start-minikube.sh
k8s/dependencies/: namespace.yaml
proto/: agentic_core.proto
src/agentic_core/: bootstrap.py  runtime.py
tests/e2e/: test_standalone_smoke.py
tests/integration/: conftest.py  test_falkordb_adapter.py  test_pgvector_adapter.py  test_postgres_adapter.py  test_redis_adapter.py
tests/unit/: test_agent_comms.py  test_bootstrap.py  test_context_loader.py  test_cron_scheduler.py  test_cross_session_recall.py  test_gateway.py  test_graph_templates.py  test_hooks.py  test_mcp_bridge.py  test_media_pipeline.py  test_meta_orchestration.py  test_observability.py  test_persona_registry.py  test_plugin_audit.py  test_plugin_system.py  test_preventive.py  test_programmatic_tools.py  test_rag_pipeline.py  test_runtime.py  test_sandbox.py  test_secure_comms_and_kill_switch.py  test_security_fixes.py  test_security_gaps.py  test_security_gaps_2.py  test_security_middleware.py  test_skill_registry.py  test_sre.py  test_superpowers_flow.py  test_tui.py  test_user_modeling.py  test_voice.py  test_webhook.py
tui/: .gitignore  CHANGELOG.md  README.md  go.mod  go.sum  main.go
ui/: .flutter-plugins-dependencies  CHANGELOG.md  README.md  pubspec.yaml
ui/lib/: main.dart
(+378 files in other folders)
