[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-core"
version = "0.1.0"
description = "Production-ready Python library for AI agent orchestration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "websockets>=13.0",
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "structlog>=24.0",
    "pyyaml>=6.0",
    "uuid-utils>=0.9",
    "simpleeval>=1.0",
    "langgraph>=0.3",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
]

[project.optional-dependencies]
standalone = [
    "aiohttp>=3.9",
    "langchain-openai>=0.3",
]
all = [
    "langgraph>=0.3",
    "langchain-core>=0.3",
    "redis>=5.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "falkordb>=1.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
    "opentelemetry-exporter-prometheus>=0.45",
    "langfuse>=2.0",
    "httpx>=0.27",
    "google-genai>=1.0",
    "presidio-analyzer>=2.2",
    "mcp>=1.0",
    "aiohttp>=3.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "asyncpg.*",
    "falkordb.*",
    "mcp.*",
    "mcp.client.*",
    "opentelemetry.*",
    "langfuse.*",
    "google.*",
    "google.genai.*",
    "grpc.*",
    "httpx",
    "httpx.*",
    "simpleeval.*",
    "langgraph.*",
    "langchain_core.*",
    "langchain_anthropic.*",
    "langchain_openai.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "agentic_core.adapters.primary.grpc.generated.*"
ignore_errors = true
